# Image-Based-GPS-Interface-for-Rover-Navigation

./: CMakeLists.txt  package.xml  readme.md  rviz_config.rviz
scripts/: get_gps_from_map_server.py  openCV_test.py
src/: get_gps_from_map_client.cpp
srv/: get_gps_from_map_srv.srv
